🆕 chore(index.html): add Cloudflare Web Analytics script to track website usage statistics

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
-
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "119f4e60724d4042af38166f435e4391"}'></script><!-- End Cloudflare Web Analytics -->
 </html>
